python_learning/k8s-examples/app/myapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      hostNetwork: true
      containers:
      - name: myapp
        image: chongzicbo/myapp
        ports:
        - containerPort: 5001
