python_learning/k8s-examples/app/myapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 5001
    targetPort: 5001
    nodePort: 30003
  type: NodePort
  # type: LoadBalancer
